ui now renders correctly on mobile and 1440

--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ body, html, #root {
     }
 
     .form__wrapper{
-        height: 80vh;
+        height: 45vh;
         justify-content: space-evenly;
     }
 
