--- a/src/stylesheets/Card.css
+++ b/src/stylesheets/Card.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    height: 40vh;
+    height: 36vh;
     width: 93%;
     margin-bottom: 30px;
 }
